<resources>
    <string name="app_name">AgendaPlus</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="edit_email">email@email.com</string>
    <string name="edit_password">Password</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_createAcc">Create Account</string>
    <string name="button_guestSignIn">Guest Sign In</string>
    <string name="screen_guest">Guest Sign In</string>
    <string name="edit_guestName">Enter your name</string>
    <string name="title_activity_home_page__navigation">HomePage_Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_item_button">addItemButton</string>
    <string name="view_calendar">View Calendar</string>
    <string name="event_item">Event</string>
    <string name="time_item">Time</string>
    <string name="add_event_time">Add Event Time</string>
    <string name="add_event_description">Add Event Description</string>
    <string name="save">Save</string>
    <string name="tv_date">Date</string>
    <string name="button_addClass">Add Class</string>
    <string name="button_classExample">Class</string>
    <string name="button_ok">OK</string>
    <string name="button_delete">Delete</string>
    <string name="classSchedule">Class Schedule</string>
    <string name="tvClassSchedule">Class Schedule</string>
    <string name="add_class">Add Class</string>
    <string name="delete_class">Delete Class</string>
    <string name="tv_add_class">Enter Class Information:</string>
    <string name="saveClass">Save</string>
    <string name="class_start_time">Class Starting Time</string>
    <string name="class_end_time">Class End Time</string>
    <string name="add_class_name">Class Name</string>
    <string name="tv_delete_class">Enter the class name to delete:</string>
    <string name="delete_class_name">Enter Class Name</string>
    <string name="btn_submit_delete">Submit</string>
    <string name="add_class_days">Class Days</string>
</resources>