<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_class_start_time"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/class_start_time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/et_class_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddClass" />

    <EditText
        android:id="@+id/et_class_end_time"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/class_end_time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_class_start_time" />

    <EditText
        android:id="@+id/et_class_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_class_name"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_class_end_time" />

    <EditText
        android:id="@+id/et_class_days"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_class_days"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_class_name" />

    <Button
        android:id="@+id/btnSubmitClass"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/saveClass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_class_days"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/tvAddClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_add_class"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_class_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>